test/org/midica/testfiles/failing/global-keysig-invalid-note.midica
INCLUDE inc/instruments.midica

* key d5/maj

0 c /4
